# Mygit

./: .gitignore  CMakeLists.txt  README.md
include/mygit/: branch.hpp  checkout.hpp  commit.hpp  core.hpp  crypto.hpp  database.hpp  index.hpp  tree.hpp  zlib_utils.hpp
src/: branch.cpp  checkout.cpp  commit.cpp  crypto.cpp  database.cpp  index.cpp  init.cpp  main.cpp  tree.cpp  zlib_utils.cpp
